<resources>
    <string name="app_name">HSE 2021</string>
    <string name="sample_text">Hello world!</string>
    <string name="button_text">+%d</string>
    <string name="change_increment_rate">Change increment rate</string>

    <string name="topic_navigation">Navigation</string>
    <string name="topic_fragment">Fragment</string>
    <string name="topic_dialogfragment">DialogFragment</string>
    <string name="topic_github_users">GitHub User List</string>
    <string name="topic_lifecycle">Lifecycle</string>

    <string name="dynamically_added_text">Dynamically added!</string>
    <string name="replace_button_text">Replace</string>
    <string name="first_fragment_text">First fragment</string>
    <string name="second_fragment_text">Second fragment</string>
    <string name="name_and_age">%s - %d</string>

    <string name="topic_dynamic">Dynamic</string>
    <string name="topic_multiple">Multiple</string>
    <string name="topic_arguments">Arguments</string>

    <string name="allow_mobile_download_title">Allow mobile downloading</string>
    <string name="allow_mobile_message">Allow your device to download videos over your mobile
        connection when Wi-Fi is not available?
    </string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="review_hint">Your feedback</string>
    <string name="alert_dialog">Alert dialog</string>
    <string name="fullscreen_dialog">Fullscreen Dialog</string>
    <string name="review_title">Review</string>
    <string name="review_action_create">Create</string>
    <string name="add_item">Add item</string>
    <string name="clear_item">Clear</string>
    <string name="action_try_again">Try again</string>
    <string name="state_error_message">An error occurred while processing your request</string>
</resources>