<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/dynamicTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_dynamic"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/multipleTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_multiple"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/argumentsTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_arguments"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/navigationTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_navigation"
        android:textAllCaps="false" />

</androidx.appcompat.widget.LinearLayoutCompat>