<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/navigationTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_navigation"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/fragmentTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_fragment"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/dialogFragmentTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_dialogfragment"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/viewModelTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_viewmodel"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/lifecycleTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_lifecycle"
        android:textAllCaps="false" />

</androidx.appcompat.widget.LinearLayoutCompat>